@@ -433,3 +433,4 @@ current
 * pheno:   added referee/rcon shoutcaster menu entries
 * pheno:   added cointoss vote menu entry
 * pheno:   fixed blowing enemy cover with health bar when FF is disabled
+* pheno:   fixed full tank health bar when FF is disabled
